fix: wrong alignement in titles of Icon section

--- a/public/styles.css
+++ b/public/styles.css
@@ -426,10 +426,6 @@ body {
   justify-content: center;
 }
 
-.iconTitle{
-
-}
-
 .iconParagraph {
   height: 100%;
 }
